So many fixes.
- mobile off center
- everyone dropdown on courses
- annoying 404
- next skipped picture down to bio
- mobile no notification icon
- profile pic sideways

--- a/buddyup/static/_assets/css/site-map.css
+++ b/buddyup/static/_assets/css/site-map.css
@@ -723,13 +723,39 @@ body {
   /* Set the fixed height of the footer here */
   height: 90px;
   background-color: #f5f5f5;
+  overflow: hidden;
 }
 #nav-main #profile-overflow, #profile-overflow .overflow-list {
   width: auto !important;
 }
+.pagination {
+  text-align: right;
+  width: 100%;
+}
+.pagination a {
+  display: inline-block;
+  margin: 0 5px;
+}
+.icon.icon-badge {
+  min-width: 24px;
+  text-align: center;
+}
 
 @media (max-width: 767px) {
   body {
-    /*padding: 0 !important;*/
+    padding: 0 !important;
+  }
+  .navbar {
+    margin-bottom: 0 !important;
+  }
+  .navbar-collapse {
+    padding: 0;
+  }
+  .navbar-collapse li.main-link {
+    width: 100%;
+    display: block;
+  }
+  .row {
+    margin-left: -20px !important;
   }
 }
